--- a/1-10/chapter10.css
+++ b/1-10/chapter10.css
@@ -74,6 +74,7 @@ footer {
   main {
     margin: 30px;
     width: 100%;
+    position: center;
     display: flex;
     flex-direction: column;
   }
