--- a/1-10/chapter10.css
+++ b/1-10/chapter10.css
@@ -67,8 +67,9 @@ footer {
 
 @media screen and (max-width: 768px) {
   header {
-    width: 100%;
-    margin: 20px;
+    width: 120%;
+    margin: 0px 0px 20px;
+    padding: 0;
   }
 
   main {
@@ -89,6 +90,7 @@ footer {
   }
 
   .footer {
-    margin: 20px;
+    width: 120%;
+    margin: 20px 0px 0px;
   }
 }
